gccida/g1/finish_init
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5599:6: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
v0 = initializer_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     initializer_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5602:11: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
for ( i = constructor_stack_0; constructor_stack_0; i = constructor_stack_0 ) 
          ^~~~~~~~~~~~~~~~~~~
          constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5602:32: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
for ( i = constructor_stack_0; constructor_stack_0; i = constructor_stack_0 ) 
                               ^~~~~~~~~~~~~~~~~~~
                               constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5602:57: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
for ( i = constructor_stack_0; constructor_stack_0; i = constructor_stack_0 ) 
                                                        ^~~~~~~~~~~~~~~~~~~
                                                        constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5604:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = i->next; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5607:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5613:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = v0->constructor_stack; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5614:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = v0->constructor_range_stack; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5616:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v0->spelling; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5621:1: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
initializer_stack_0 = v0->next; 
^~~~~~~~~~~~~~~~~~~
initializer_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_init/src/obj/c-typeck.o] Error 1
